templates/webhookie_template.yaml
---
# Source: webhookie/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: webhookie
  name: webhookie
  namespace: "default"
spec:
  selector:
    app: webhookie
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: backend
    - protocol: TCP
      port: 4200
      targetPort: 80
      name: frontend
---
# Source: webhookie/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhookie
  namespace: "default"
  labels:
    app: "webhookie"
    role: main
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhookie
      role: main
  template:
    metadata:
      annotations:
        rollme: "6P6iG"
      labels:
        app: webhookie
        role: main
    spec:
      #      serviceAccountName: webhookie-sa
      containers:
        - image: "hookiesolutions/webhookie:latest"
          imagePullPolicy: Always
          name: webhookie
          resources:
            limits:
              memory: "4Gi"
              cpu: "2"
            requests:
              memory: "2Gi"
              cpu: "1"
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 80
              protocol: TCP
---
# Source: webhookie/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhookie
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: webhookie
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: webhookie
                port:
                  number: 4300
          - path: /api/*
            pathType: Prefix
            backend:
              service:
                name: webhookie
                port:
                  number: 8080
